Bug 152105 - FTL B3 should be able to run quicksort asm.js test
Summary: FTL B3 should be able to run quicksort asm.js test
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
: 152125 (view as bug list)
Depends on:
Blocks: 150279
  Show dependency treegraph
 
Reported: 2015-12-09 21:37 PST by Filip Pizlo
Modified: 2015-12-10 20:04 PST (History)
13 users (show)

See Also:


Attachments
the patch (34.89 KB, patch)
2015-12-09 22:11 PST, Filip Pizlo
no flags Details | Formatted Diff | Diff
Patch (23.15 KB, patch)
2015-12-10 17:08 PST, Benjamin Poulain
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2015-12-09 21:37:58 PST
Patch forthcoming.
Comment 1 Filip Pizlo 2015-12-09 22:11:34 PST
Created attachment 267070 [details]
the patch
Comment 2 WebKit Commit Bot 2015-12-10 00:18:27 PST
Attachment 267070 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/ftl/FTLB3Output.h:215:  The parameter name "value" adds no information, so it should be removed.  [readability/parameter_name] [5]
ERROR: Source/JavaScriptCore/ftl/FTLB3Output.h:215:  The parameter name "pointer" adds no information, so it should be removed.  [readability/parameter_name] [5]
ERROR: Source/JavaScriptCore/ftl/FTLB3Output.h:216:  The parameter name "value" adds no information, so it should be removed.  [readability/parameter_name] [5]
ERROR: Source/JavaScriptCore/ftl/FTLB3Output.h:216:  The parameter name "pointer" adds no information, so it should be removed.  [readability/parameter_name] [5]
Total errors found: 4 in 18 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Filip Pizlo 2015-12-10 09:20:55 PST
*** Bug 152125 has been marked as a duplicate of this bug. ***
Comment 4 Geoffrey Garen 2015-12-10 15:36:37 PST
Comment on attachment 267070 [details]
the patch

View in context: https://bugs.webkit.org/attachment.cgi?id=267070&action=review

r=me

> Source/JavaScriptCore/ChangeLog:16
> +        - Implemented Mod in B3 and wrote tests.

I wonder how this compares to https://bugs.webkit.org/show_bug.cgi?id=152110.
Comment 5 Benjamin Poulain 2015-12-10 15:44:49 PST
Comment on attachment 267070 [details]
the patch

Oops, wrong bug.
Comment 6 Benjamin Poulain 2015-12-10 17:08:19 PST
Created attachment 267140 [details]
Patch
Comment 7 Benjamin Poulain 2015-12-10 17:08:52 PST
Same patch, rebaselined.
Comment 8 Filip Pizlo 2015-12-10 20:04:19 PST
Landed in http://trac.webkit.org/changeset/193943