Source/JavaScriptCore/b3/B3ReduceStrength.cpp
@@ -293,6 +293,9 @@ private:
 
         case Mod:
         case ChillMod:
+            // Turn this: Mod(constant1, constant2)
+            // Into this: constant1 / constant2
+            // Note that this uses ChillMod semantics.
             replaceWithNewValue(m_value->child(0)->modConstant(m_proc, m_value->child(1)));
             break;
 
